Fixed img paths.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
 					<h1>Getting To Know Tom Britton</h1>
-					<img src="/img/character-sheet-header.png">
+					<img src="img/character-sheet-header.png">
 				</section>
 				<section>
 					<h2>Important Stats</h2>
@@ -102,7 +102,7 @@
 					</section>
 					<section>
 						<h2>Grew up in Ellettsville Indiana</h2>
-						<img src="/img/ellettsville.jpg" style="max-width:600px">
+						<img src="img/ellettsville.jpg" style="max-width:600px">
 						<ul>
 							<li>Population 3275 in 1990 census</li>
 							<li>High school mascot: Mustang</li>
@@ -110,7 +110,7 @@
 					</section>
 					<section>
 						<h2>College at Indiana University</h2>
-						<img src="/img/iu.jpg" style="max-width:600px">
+						<img src="img/iu.jpg" style="max-width:600px">
 						<ul>
 							<li>1997 - 2003</li>
 							<li>Studied Journalism and then Studio Art/Art History</li>
@@ -152,7 +152,7 @@
 				<section>
 					<section>
 						<h2>Austin, Texas</h2>
-						<img src="/img/austin.jpg" style="max-width: 600px">
+						<img src="img/austin.jpg" style="max-width: 600px">
 						<ul>
 							<li>2008 - ???</li>
 							<li>Best hamburger: Casino el Camino</li>
@@ -170,7 +170,7 @@
 					</section>
 					<section>
 						<h2>The Team in 2008</h2>
-						<img src="/img/AVClub.jpg" style="max-width: 600px">
+						<img src="img/AVClub.jpg" style="max-width: 600px">
 					</section>
 					<section>
 						<h2>Associate Digital Content Administrator</h2>
